zebra-scan/src/storage/db/tests/snapshots/column_family_names.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: cf_names
---
[
  "default",
  "sapling_tx_ids",
]
