zebra-scan/src/storage/db/tests/snapshots/empty_column_families@empty.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: empty_column_families
---
[
  "sapling_tx_ids: no entries",
]
