zebra-scan/src/storage/db/tests/snapshots/sapling_key_0_results@mainnet_2.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: sapling_results
---
{
  Height(0): [
    SaplingScannedResult("c4eaa58879081de3c24a7b117ed2b28300e7ec4c4c1dff1d3f1268b7857a4ddb"),
  ],
  Height(1): [
    SaplingScannedResult("851bf6fbf7a976327817c738c489d7fa657752445430922d94c983c0b9ed4609"),
  ],
  Height(2): [
    SaplingScannedResult("8974d08d1c5f9c860d8b629d582a56659a4a1dcb2b5f98a25a5afcc2a784b0f4"),
  ],
  Height(419199): [],
}
