zebra-scan/src/storage/db/tests/snapshots/sapling_key_0_results@testnet_1.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: sapling_results
---
{
  Height(0): [
    SaplingScannedResult("c4eaa58879081de3c24a7b117ed2b28300e7ec4c4c1dff1d3f1268b7857a4ddb"),
  ],
  Height(1): [
    SaplingScannedResult("f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75"),
  ],
  Height(279999): [],
}
