zebra-scan/src/storage/db/tests/snapshots/sapling_key_0_results@testnet_2.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: sapling_results
---
{
  Height(0): [
    SaplingScannedResult("c4eaa58879081de3c24a7b117ed2b28300e7ec4c4c1dff1d3f1268b7857a4ddb"),
  ],
  Height(1): [
    SaplingScannedResult("f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75"),
  ],
  Height(2): [
    SaplingScannedResult("5822c0532da8a008259ac39933d3210e508c17e3ba21d2b2c428785efdccb3d5"),
  ],
  Height(279999): [],
}
