zebra-scan/src/storage/db/tests/snapshots/sapling_key_0_results@testnet_keys.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: sapling_results
---
{
  Height(279999): [],
}
