zebra-scan/src/storage/db/tests/snapshots/sapling_key_1_results@mainnet_keys.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: sapling_results
---
{
  Height(999999): [],
}
