zebra-scan/src/storage/db/tests/snapshots/sapling_key_1_results@testnet_0.snap
---
source: zebra-scan/src/storage/db/tests/snapshot.rs
expression: sapling_results
---
{
  Height(0): [],
  Height(999999): [],
}
